[gd_scene load_steps=4 format=3 uid="uid://gffxovxtdjk8"]

[ext_resource type="Script" path="res://actors/warning_arrow.gd" id="1_sra05"]
[ext_resource type="FontFile" uid="uid://c6ueojjym5mxc" path="res://fonts/GravityRegular5.ttf" id="2_d3fw8"]
[ext_resource type="Texture2D" uid="uid://bwk1rlf4wijjj" path="res://ui/arrow.png" id="3_48j5k"]

[node name="WarningArrow" type="Node2D"]
modulate = Color(1, 0, 0, 1)
script = ExtResource("1_sra05")
margin = 100.0

[node name="Label" type="Label" parent="."]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -20.0
offset_top = -4.633
offset_right = 20.0
offset_bottom = 8.367
grow_horizontal = 2
theme_override_fonts/font = ExtResource("2_d3fw8")
theme_override_font_sizes/font_size = 10
text = "3.0"
horizontal_alignment = 1

[node name="RotationControl" type="Node2D" parent="."]

[node name="Node2D" type="Node2D" parent="RotationControl"]
rotation = 1.5708

[node name="Sprite2D" type="Sprite2D" parent="RotationControl/Node2D"]
position = Vector2(0, -8)
texture = ExtResource("3_48j5k")

[node name="WarningTime" type="Timer" parent="."]
one_shot = true

[connection signal="timeout" from="WarningTime" to="." method="_on_warning_time_timeout"]
